--- a/exercise_one.html
+++ b/exercise_one.html
@@ -13,17 +13,17 @@
             TODO: This script doesn't work properly for the temperature "70". Fix it so that it works well for all temperatures.
         */
     
-        var input_num = prompt("What's the temperature?");
-        if (isNaN(input_num)) {
-            console.log("Hey that's not a number!")
-        }if else(input_num < 30) {
-            console.log("It's really cold.");
-        }if else(input_num < 50) {
-            console.log("It's pretty chilly.");
-        }if else(input_num < 70) {
-            console.log("It's warm.");
-        }else (input_num > 70) {
-            console.log("It's hot!")
+        var input_num = prompt("What's the temperature?"); //declare var input_num equal to prompt, Whats the temperature?
+            if (isNaN(input_num)) { //if input_num is not a number
+            console.log("Hey that's not a number!"); //log string, Hey that's not a number! 
+        }   else if (input_num < 30) { //else if input_num is less than 30
+            console.log("It's really cold."); //log string, It's really cold.
+        }   else if (input_num < 50) { //else if input_num is less than 50
+            console.log("It's pretty chilly."); //log string, It's pretty chilly.
+        }   else if (input_num < 70) { //else if input_num is less than 70
+            console.log("It's warm."); //log string, It's warm.
+        }   else if (input_num > 70) { //else if input_num is greater than 70
+            console.log("It's hot!"); //log string, It's hot!
         }
     
     </script>
